--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
     "next": "14.2.16",
+    "next-auth": "^4.24.7",
+    "okto-sdk-react": "file:../okto-sdk-react",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.21.53"
   },
   "devDependencies": {
     "@types/node": "^20",
