--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
+    "nanoid": "^5.0.9",
     "next": "14.2.16",
     "next-auth": "^4.24.7",
     "okto-sdk-react": "file:../okto-sdk-react",
