--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "okto-sdk-react": "file:../okto-sdk-react",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.53"
