--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "nanoid": "^5.0.9",
     "next": "14.2.16",
     "next-auth": "^4.24.7",
-    "okto-sdk-react": "file:../okto-sdk-react",
+    "okto-sdk-react": "file:okto-sdk-react",
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.14.1",
